--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webshop Demo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 <body>
-    
+    <gridhome class="gridhome">
     <div class="header">
         <div class="grid">
 
             <link rel="stylesheet" href="css/grids.css">
             <link rel="stylesheet" href="css/blocks/headers.css">
+            <link rel="stylesheet" href="css/home/content.css">
             
             <div class="bluebar" style="background-color: #0079e4;">
 
@@ -19,36 +22,48 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Terms</a></li>
+                    <li><a class="home" href="index.html">Home</a></li>
+                    <li><a class="product" href="html/products.html">Products</a></li>
+                    <li><a class="about" href="html/about.html">About</a></li>
+                    <li><a class="terms" href="html/terms.html">Terms</a></li>
                 </ul>
             </div>
 
             <div class="search">
                 <form action="html/products.html">
                     <input type="text" placeholder="Search for Products...">
-                    <input type="button" value="Search">
+                    <input type="button" class="button" value="Search">
                 </form>
             </div>
 
             <div class="logo">
-                <img src="/img/istockphoto-1147544807-612x612.jpg" alt="Logo" width="60px">
+                <img src="/img/istockphoto-1147544807-612x612.jpg" class="logoimg" alt="Logo" width="60px">
             </div>
 
             <div class="contact">
-                <a href="#">Contact</a>
+               <a href="html/contact.html"><i class="fa-solid fa-message" id="contactbtn"></i></a>
+                <a href="html/cart.html"><i class="fa-solid fa-cart-shopping" id="cart"></i></a>
             </div>
+
+            <div class="backgroundcolor"></div>
 
         </div>
     </div>
 
-    <div class="content"></div>
+    <div class="content">
+        <div class="contentGrid">
+            <img src="" alt="">
+
+            <div class="text">
+                <h2></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
 
     <div class="products"></div>
 
     <div class="footer"></div>
-
+</gridhome>
 </body>
 </html>
