--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Webshop Demo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+            <link rel="stylesheet" href="css/grids.css">
+            <link rel="stylesheet" href="css/blocks/headers.css">
+            <link rel="stylesheet" href="css/home/content.css">
 </head>
 <body>
     <gridhome class="gridhome">
     <div class="header">
         <div class="grid">
 
-            <link rel="stylesheet" href="css/grids.css">
-            <link rel="stylesheet" href="css/blocks/headers.css">
-            <link rel="stylesheet" href="css/home/content.css">
             
             <div class="bluebar" style="background-color: #0079e4;">
 
@@ -32,7 +32,7 @@
             <div class="search">
                 <form action="html/products.html">
                     <input type="text" placeholder="Search for Products...">
-                    <input type="button" class="button" value="Search">
+                    <input type="submit" class="button" value="Search">
                 </form>
             </div>
 
